
- Added support for buckets located in the EU. Due to this change, the 
  "s3service.end-point-host" property is now obsolete.
- Added a default bucket location configuration setting in 
  jets3t.properties: "s3service.default-bucket-location". If you do not
  use an explicit bucket location when you use the bucket creation API
  method, the bucket will be created in this default location.
- The FileComparer class used by JetS3t applications can now be configured to
  use pre-generated <filename>.md5 files as a source for MD5 hash values, 
  removing the need for hash values to be calculated for every synchronization 
  operation - and potentially saving a great deal of time when you are 
  synchronizing large files whose content changes rarely. This feature is
  controlled by a group of propery settings in jets3t.properties: 
  filecomparer.use-md5-files, filecomparer.generate-md5-files, 
  filecomparer.skip-upload-of-md5-files.
- Fixed bugs that caused uploads greater than 2GB to fail 
  (Expect: 100-Continue is now supported)
- File listings as built using the FileComparer.buildFileMap() methods can be
  set not to include place-holder objects to represent empty directories 
  (mimetype "application/x-directory") with the new configuration setting
  uploads.storeEmptyDirectories.
- Added the Bouncy Castle security provider to the suite, increasing the number
  of cipher algorithms available for encrypting files.
- The method S3Service.listObjectsChunked now includes Common Prefixes in the
  result object returned.
- Upgraded HTTPClient library to version 3.1

  * REST S3 Service

- Rudimentary upload bandwidth throttling using the jets3t.properties setting
  httpclient.read-throttle, which is specified in KB/s.
- Proxy settings are now configurable via the jets3t.properties settings:
  httpclient.proxy-autodetect, httpclient.proxy-host, httpclient.proxy-port

  * Multi-threaded Service
  